==> microchip-pic-avr-examples/dspic33a-curiosity-oob/dspic33ak128mc106_dim/dspic33ak128mc106_dim.X/bsp/led1.c <==
/*******************************************************************************
Copyright 2024 Microchip Technology Inc. (www.microchip.com)

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*******************************************************************************/

#include <xc.h>
#include "led_simple.h"

void LED1_Initialize()
{
    TRISCbits.TRISC4 = 0;
}

void LED1_On()
{
    LATCbits.LATC4 = 1;
}

void LED1_Off()
{
    LATCbits.LATC4 = 0;
}

void LED1_Toggle()
{
    LATCbits.LATC4 ^= 1;
}

void LED1_Set(bool on)
{
    LATCbits.LATC4 = on;
}

struct LED_SIMPLE led1 = 
{
    &LED1_Initialize,
    &LED1_On,
    &LED1_Off,
    &LED1_Toggle,
    &LED1_Set
};
